tests/invalid/numeric_literal_context_f32_out_of_range.wio
fn Entry() -> i32 {
    let value: f32 = 1.0e100;
    return 0;
}
